@@ -31,6 +31,15 @@
                 <control type="image">
                     <posx>0</posx>
                     <posy>0</posy>
+                    <width>col-1-begin</width>
+                    <height>2-row</height>
+                    <texture>colors/white.png</texture>
+                    <colordiffuse>highlight</colordiffuse>
+                    <aspectratio>stretch</aspectratio>
+                </control>
+                <control type="image">
+                    <posx>col-2-begin</posx>
+                    <posy>0</posy>
                     <width>fullscreenWidth</width>
                     <height>2-row</height>
                     <texture>colors/white.png</texture>
@@ -41,22 +50,22 @@
                 <control type="image">
                     <posx>col-1-begin</posx>
                     <posy>0</posy>
-                    <width>2-row</width>
-                    <height>2-row</height>
+                    <width>1-col</width>
+                    <height>1-col</height>
                     <texture>colors/black.png</texture>
-                    <bordertexture border="0">colors/black.png</bordertexture>
-                    <bordersize>2,0,2,0</bordersize>
-                    <aspectratio>scale</aspectratio>
+                    <bordertexture border="0" diffuse="masks/circle.png">colors/black.png</bordertexture>
+                    <bordersize>0</bordersize>
+                    <aspectratio>stretch</aspectratio>
                 </control>
                 <control type="image">
                     <posx>col-1-begin</posx>
                     <posy>0</posy>
-                    <width>2-row</width>
-                    <height>2-row</height>
-                    <texture>$INFO[Player.Art(thumb)]</texture>
+                    <width>1-col</width>
+                    <height>1-col</height>
+                    <texture border="0" diffuse="masks/circle.png">$INFO[Player.Art(thumb)]</texture>
                     <bordertexture border="0">colors/black.png</bordertexture>
-                    <bordersize>2,0,2,0</bordersize>
-                    <aspectratio>scale</aspectratio>
+                    <bordersize>0</bordersize>
+                    <aspectratio>stretch</aspectratio>
                 </control>
                 <control type="label">
                     <posx>192</posx>
