@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <smartplaylist type="movies">
-    <name>collage_randomMovies</name>
+    <name>collage_RandomMovies</name>
     <match>all</match>
     <limit>50</limit>
     <order direction="ascending">random</order>
